# pytafast

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-test-publish.yml  build.yml
src/: candlestick.cpp  common.h  cycle.cpp  math_operator.cpp  math_transform.cpp  momentum.cpp  overlap.cpp  price_transform.cpp  pytafast_ext.cpp  pytalib_ext.cpp  statistic.cpp  volatility.cpp  volume.cpp
src/pytafast/: __init__.py  aio.py
src/pytalib/: __init__.py  aio.py
tests/: test_async_leak.py  test_benchmark.py  test_ta_lib.py
