[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pytafast"
version = "0.2.0"
description = "Python wrapper for ta-lib using nanobind"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ta-lib", "trading", "technical analysis", "finance", "nanobind", "pandas", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "pandas"
]
authors = [
  {name = "curry tang", email = "twn39@163.com"}
]

[project.urls]
Homepage = "https://github.com/twn39/pytafast"
Repository = "https://github.com/twn39/pytafast"
Issues = "https://github.com/twn39/pytafast/issues"

[tool.scikit-build]
minimum-version = "0.4"
cmake.build-type = "Release"
sdist.include = [
    "third_party/ta-lib/src/**/*",
    "third_party/ta-lib/include/**/*",
    "third_party/ta-lib/CMakeLists.txt",
    "third_party/ta-lib/ta_lib.cmake", 
    "third_party/ta-lib/ta-lib-config.cmake.in",
    "third_party/nanobind/src/**/*",
    "third_party/nanobind/include/**/*",
    "third_party/nanobind/ext/**/*",
    "third_party/nanobind/cmake/**/*",
    "third_party/nanobind/CMakeLists.txt",
]
sdist.exclude = [
    "third_party/ta-lib/ide/**/*",
    "third_party/ta-lib/dist/**/*",
    "third_party/ta-lib/dotnet/**/*",
    "third_party/ta-lib/java/**/*",
    "third_party/ta-lib/docs/**/*",
    "third_party/ta-lib/swig/**/*",
    "third_party/nanobind/docs/**/*",
    "third_party/**/*.deb",
    "third_party/**/*.msi",
    "third_party/**/*.zip",
    "third_party/**/*.dll",
    "third_party/**/*.class",
    "third_party/**/*.pdf",
    "third_party/**/*.sdf",
]

[dependency-groups]
dev = [
    "ta-lib>=0.6.8",
    "pytest-benchmark>=4.0.0",
    "akshare>=1.18.27",
    "plotly>=6.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
